cabal-version:      2.4
name:               awelehs
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jean-Marc Alliot
maintainer:         jm@alliot.org

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable awelehs
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0,array,SDL,SDL-gfx,SDL-ttf
    hs-source-dirs:   app
    default-language: Haskell2010
